--- a/.github/workflows/slack.yml
+++ b/.github/workflows/slack.yml
@@ -37,5 +37,42 @@ jobs:
           method: chat.postMessage
           token: ${{ secrets.SLACK_BOT_TOKEN }}
           payload: |
-            channel: C019426UBNY
-            text: ":new: Good first issue up for grabs: <${{ github.event.issue.html_url }}|${{ github.event.issue.title }}>"
+            {
+                  "channel": "C019426UBNY",
+                  "text": ":new: ✨ Good first issue up for grabs: ${{ github.event.issue.title }}",
+                  "blocks": [
+                    {
+                      "type": "header",
+                      "text": {
+                        "type": "plain_text",
+                        "text": ":new: ✨ Good first issue up for grabs",
+                        "emoji": true
+                      }
+                    },
+                    {
+                      "type": "section",
+                      "text": {
+                        "type": "mrkdwn",
+                        "text": "A new issue is ready for a contributor:\n*<${{ github.event.issue.html_url }}|#${{ github.event.issue.number }} - ${{ github.event.issue.title }}>*"
+                      },
+                      "accessory": {
+                        "type": "button",
+                        "text": {
+                          "type": "plain_text",
+                          "text": "View on GitHub",
+                          "emoji": true
+                        },
+                        "url": "${{ github.event.issue.html_url }}"
+                      }
+                    },
+                    {
+                      "type": "context",
+                      "elements": [
+                        {
+                          "type": "mrkdwn",
+                          "text": "Repository: *${{ github.repository }}* |  Opened by: *${{ github.event.issue.user.login }}*"
+                        }
+                      ]
+                    }
+                  ]
+            }
